--- a/package.json
+++ b/package.json
@@ -1,45 +1,45 @@
 {
   "name": "api-version-changer-salesforce",
-	"displayName": "API Version Changer Salesforce",
-	"description": "This will help you with the regex to replace API versions",
-	"version": "0.0.1",
-	"publisher": "VtorBatista",
-	"engines": {
-		"vscode": "^1.62.0"
-	},
-	"categories": [
-		"Other"
-	],
-	"activationEvents": [
-        "onCommand:api-version-changer-salesforce.findReplaceAPI"
-	],
-	"main": "./extension.js",
-	"contributes": {
-		"commands": [{
-            "command": "api-version-changer-salesforce.findReplaceAPI",
-            "title": "API Version Changer"
-
-		}]
-	},
-	"scripts": {
-		"lint": "eslint .",
-		"pretest": "npm run lint",
-		"test": "node ./test/runTest.js"
-	},
-	"devDependencies": {
-        "@types/vscode": "^1.62.0",
-        "@types/glob": "^7.1.4",
-        "@types/mocha": "^9.0.0",
-        "@types/node": "14.x",
-        "eslint": "^8.1.0",
-        "glob": "^7.1.7",
-        "mocha": "^9.1.3",
-        "typescript": "^4.4.4",
-        "@vscode/test-electron": "^1.6.2"
-    },
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/Vitor-batista/APIVersionChangerSalesforce"
-	  }
-
+  "displayName": "API Version Changer Salesforce",
+  "description": "This will help you with the regex to replace API versions",
+  "version": "0.0.2",
+  "publisher": "VtorBatista",
+  "engines": {
+    "vscode": "^1.62.0"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "onCommand:api-version-changer-salesforce.findReplaceAPI"
+  ],
+  "main": "./extension.js",
+  "contributes": {
+    "commands": [
+      {
+        "command": "api-version-changer-salesforce.findReplaceAPI",
+        "title": "API Version Changer"
+      }
+    ]
+  },
+  "scripts": {
+    "lint": "eslint .",
+    "pretest": "npm run lint",
+    "test": "node ./test/runTest.js"
+  },
+  "devDependencies": {
+    "@types/vscode": "^1.62.0",
+    "@types/glob": "^7.1.4",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "14.x",
+    "eslint": "^8.1.0",
+    "glob": "^7.1.7",
+    "mocha": "^9.1.3",
+    "typescript": "^4.4.4",
+    "@vscode/test-electron": "^1.6.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Vitor-batista/APIVersionChangerSalesforce"
+  }
 }
