--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "onCommand:saleforce-easy-help.findReplaceAPI",
     "onCommand:saleforce-easy-help.installSFPowerKit",
     "onCommand:saleforce-easy-help.getManifest",
-    "onCommand:saleforce-easy-help.retriveChangeSet"
+    "onCommand:saleforce-easy-help.retriveChangeSet",
+    "onCommand:saleforce-easy-help.logoutInstance"
   ],
   "main": "./extension.js",
   "contributes": {
@@ -34,6 +35,10 @@
       {
         "command": "saleforce-easy-help.retriveChangeSet",
         "title": "EasyHelp: Retrive Change Set"
+      },
+      {
+        "command": "saleforce-easy-help.logoutInstance",
+        "title": "EasyHelp: Logout From Instance"
       }
     ]
   },
